syntax = "proto3";

import "common.proto";

option java_multiple_files = true;
option java_package = "papyrus.channel.protocol";
option java_outer_classname = "PapyrusChannel";


service ChannelPeer {
    rpc Opened (ChannelOpenedRequest) returns (ChannelOpenedResponse);
    rpc Update (ChannelUpdate) returns (ChannelUpdateResponse);
}

message ChannelOpenedRequest {
    string channel_id = 1;
}

message ChannelOpenedResponse {
    Error error = 2;
}

message ChannelState {
    string channel_id = 1;
    int32 nonce = 2;
    bool final = 3;
    string total_transfer = 4;
    bytes completed_root = 5;
    bytes locked_root = 6;
    bytes signature = 7;
}

message ChannelUpdate {
    ChannelState state = 1;
}

message ChannelUpdateResponse {
    StatusCode status = 1;
    string error = 2;
}

